test/data/check-unsupported.test
-- Tests for unsupported features


[case testSetLiteral]
{None} # E: Feature not implemented yet (set literal)

[case testConditionalExpression]
a = None if None else None
[out]
main, line 1: Feature not implemented yet (conditional expression) 

[case testDecorator]
@f  # E: Feature not implemented yet (decorator)
def f(x): pass

[case testWith]
void f():
  with None:
    pass
[out]
main: In function "f":
main, line 2: Feature not implemented yet (with statement)

[case testNonTopLevelImport]
def f():
    import x
if f:
    from y import a
class A:
    def f(self):
        from z import *
[out]
main: In function "f":
main, line 2: Imports within blocks not supported yet
main: At top level:
main, line 4: Imports within blocks not supported yet
main: In function "f":
main, line 7: Imports within blocks not supported yet

[case testNestedFunction]
def f():
    def g(): pass # Fail
class A:
    def f(self):
        def g(): pass # Fail
[out]
main: In function "f":
main, line 2: Nested functions not supported yet
main, line 5: Nested functions not supported yet

[case testNestedClass]
def f():
    class A: pass    
class B:
    class C: pass
    def f(self):
        class D: pass
[out]
main: In function "f":
main, line 2: Nested classes not supported yet
main: At top level:
main, line 4: Nested classes not supported yet
main: In function "f":
main, line 6: Nested classes not supported yet

[case testChainedAssignment]
x = y = object
def f():
    x = y = object
class A:
    x = y = object
[out]
main, line 1: Feature not implemented yet (chained assignment)
main: In function "f":
main, line 3: Feature not implemented yet (chained assignment)
main: In class "A":
main, line 5: Feature not implemented yet (chained assignment)

[case testClassAttributeExternalAccess]
class A:
  any x
  def f(self): pass
A.x
A.f
[out]
main, line 4: Feature not implemented yet (class attributes)
main, line 5: Feature not implemented yet (class attributes)

[case testClassAttributeAccessInTypeDeclaration]
class A:
  any x
  def f(self): pass
A.x y
[out]
main, line 4: Feature not implemented yet (class attributes)
